# movedb-core

./: .gitignore  .markdownlint.json  CONDA_PACKAGING.md  CONDA_SETUP_SUMMARY.md  INSTALL.md  LICENSE  LINT_FIXES.md  MANIFEST.in  Makefile  README.md  build_conda.sh  bump_version.py  environment-opensim.yml  environment.yml  pyproject.toml  setup.cfg  test_dev_setup.py  validate_package.sh  verify_github_actions.py
.github/workflows/: README.md  build.yml  ci-cd.yml  tests.yml
conda-recipe/: meta.yaml
docs/: API_DESIGN.md  CONDA_FORGE_SUBMISSION.md  CONDA_PACKAGING.md  DEVELOPMENT.md  GITHUB_ACTIONS.md  GITHUB_ACTIONS_SUMMARY.md  INSTALL.md  LINTING.md  PYTEST_SETUP.md  README.md  ROADMAP_V1.md  RUN_TESTS_IMPROVEMENTS.md  VERSION_MANAGEMENT.md
scripts/: README.md  check_v1_readiness.py  make.bat  make.ps1  prepare_conda_forge.py  run_tests.py  setup_anaconda_integration.sh  setup_docs_linting.sh  setup_opensim_env.sh
src/movedb/: __init__.py
src/movedb/core/: __init__.py  enums.py  events.py  force_platforms.py  sentinels.py  time_series.py  trial.py
src/movedb/file_io/: __init__.py  c3d_io.py  opensim_exporters.py  opensim_readers.py
src/movedb/utils/: __init__.py  stp.py  utils.py
tests/: test_basic.py  test_simple.py
