[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "movedb-core"
version = "0.2.1"
description = "Core library for movement database operations, including C3D file I/O and OpenSim integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hudson Burke", email = "hudsonburke01@gmail.com"},
]
maintainers = [
    {name = "Hudson Burke", email = "hudsonburke01@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = ["biomechanics", "movement", "c3d", "opensim", "motion-capture"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "polars>=0.20.0",
    "pydantic>=2.0.0",
    "loguru>=0.6.0",
    "ezc3d>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
    "isort",
]
opensim = [
    # Note: opensim must be installed via conda: conda install -c opensim-org opensim
    # OpenSim requires Python 3.7-3.12 (not compatible with Python 3.13+)
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme",
    "myst-parser",
]
notebooks = [
    "jupyter",
    "matplotlib",
    "seaborn",
]

[project.urls]
Homepage = "https://github.com/SOMA-Bionics/movedb-core"
Documentation = "https://movedb.readthedocs.io"
Repository = "https://github.com/SOMA-Bionics/movedb-core"
Issues = "https://github.com/SOMA-Bionics/movedb-core/issues"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
    "/notebooks",
    "/.pytest_cache",
    "/.mypy_cache",
    "/__pycache__",
]

[tool.hatch.build.targets.wheel]
packages = ["src/movedb"]

[tool.hatch.version]
path = "src/movedb/__init__.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src/movedb",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "file_io: marks tests that require file I/O",
    "opensim: marks tests that require OpenSim",
]
minversion = "0.2.1"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    "ignore:.*pydantic.*:UserWarning",
    "ignore:.*SwigPyObject.*:DeprecationWarning",
    "ignore:.*SwigPyPacked.*:DeprecationWarning",
    "ignore:.*swigvarlink.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "0.2.1"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ezc3d.*",
    "opensim.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 127
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".eggs",
    "*.egg",
]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
